--- a/.env
+++ b/.env
@@ -3,8 +3,10 @@ ENV = "local"
 LOG_LEVEL="INFO"
 SERVICE_NAME="youtube-dashboard"
 MONGODB_URL="mongodb://localhost:27017"
-GOOGLE_API_KEY="AIzaSyAVOQRC86RmngsEvbh-_MWYbii6XHOBfzM"
+# GOOGLE_API_KEY="AIzaSyAVOQRC86RmngsEvbh-_MWYbii6XHOBfzM"
 # GOOGLE_API_KEY="AIzaSyDXqzIOG8StsiV1KH0SJhg58jQ94frKTNc"
-# GOOGLE_API_KEY="AIzaSyDvODpRwzPqpbsizh-9gXckOdSGW89SR1Y"
-KAFKA_BOOTSTRAP_SERVER="localhost:9092"
+GOOGLE_API_KEY="AIzaSyDvODpRwzPqpbsizh-9gXckOdSGW89SR1Y"
+# KAFKA_BOOTSTRAP_SERVER="localhost:9092"
+KAFKA_BOOTSTRAP_SERVER="host.docker.internal:9092"
+# KAFKA_BOOTSTRAP_SERVER="PLAINTEXT://localhost:9092"
 DATA_GENERATOR_KAFKA_TOPIC="youtube-stream"
