--- a/.env
+++ b/.env
@@ -2,11 +2,12 @@ BASE_ROUTE = "/youtube-dashboard"
 ENV = "local" 
 LOG_LEVEL="INFO"
 SERVICE_NAME="youtube-dashboard"
-MONGODB_URL="mongodb://localhost:27017"
+# MONGODB_URL="mongodb://localhost:27017"
+MONGODB_URL="mongodb://mongodb:27017"
 # GOOGLE_API_KEY="AIzaSyAVOQRC86RmngsEvbh-_MWYbii6XHOBfzM"
 # GOOGLE_API_KEY="AIzaSyDXqzIOG8StsiV1KH0SJhg58jQ94frKTNc"
 GOOGLE_API_KEY="AIzaSyDvODpRwzPqpbsizh-9gXckOdSGW89SR1Y"
 # KAFKA_BOOTSTRAP_SERVER="localhost:9092"
-KAFKA_BOOTSTRAP_SERVER="host.docker.internal:9092"
+KAFKA_BOOTSTRAP_SERVER="kafka:9092"
 # KAFKA_BOOTSTRAP_SERVER="PLAINTEXT://localhost:9092"
 DATA_GENERATOR_KAFKA_TOPIC="youtube-stream"
