--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,52 +8,71 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - kafka-net
+
 
   redis:
     image: redis:latest
     container_name: redis
     ports:
       - "6379:6379"
+    networks:
+      - kafka-net
 
-  kafka:
-    image: wurstmeister/kafka
-    container_name: kafka
-    depends_on: 
-      - zookeeper
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
 
   zookeeper:
     image: wurstmeister/zookeeper
+    container_name: zookeeper
     ports:
       - "2181:2181"
-    restart: unless-stopped
+    networks:
+      - kafka-net
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+      - "29092:29092"
+    environment:
+      KAFKA_LISTENERS: EXTERNAL_SAME_HOST://:29092,INTERNAL://:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL_SAME_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: youtube-stream
+    networks:
+      - kafka-net
 
   youtube_dashboard:
     build: ./
     container_name: youtube-dashboard
     ports:
-      - "8000:8000"
+      - "8081:8081"
     depends_on:
       - mongodb
       - redis
       - kafka
+    networks:
+      - kafka-net
+    restart: always
 
-  # consumer:
-  #   build: ./consumers
-  #   container_name: youtube-data-insertion-consumer
-  #   depends_on:
-  #     - mongodb
-  #     - redis
-  #     - kafka
+  consumer:
+    build: 
+      context: ./
+      dockerfile: Dockerfile.consumer
+    container_name: youtube-data-insertion-consumer
+    depends_on:
+      - mongodb
+      - redis
+      - kafka
+    networks:
+      - kafka-net
+    restart: always
 
 volumes:
   mongodb_data:
+
+networks:
+  kafka-net:
+    driver: bridge
+    name: kafka_docker_bridge_v1
