--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   mongodb:
@@ -11,7 +11,6 @@ services:
     networks:
       - kafka-net
 
-
   redis:
     image: redis:latest
     container_name: redis
@@ -19,7 +18,6 @@ services:
       - "6379:6379"
     networks:
       - kafka-net
-
 
   zookeeper:
     image: wurstmeister/zookeeper
@@ -57,7 +55,7 @@ services:
     restart: always
 
   consumer:
-    build: 
+    build:
       context: ./
       dockerfile: Dockerfile.consumer
     container_name: youtube-data-insertion-consumer
